Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,10 @@ steps:
     command: 'publish'
     zipAfterPublish: true
     publishWebProjects: true
-    arguments: 
-    
+     
+- task: AzureRmWebAppDeployment@4
+  inputs:
+    ConnectionType: 'AzureRM'
+    appType: 'webApp'
+    WebAppName: 'skistore'
+    packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
