--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ steps:
     SonarCloud: 'Sonar'
     organization: '210215-usf-net'
     scannerMode: 'MSBuild'
-    projectKey: '210215-USF-NET_Jonathan_Long-P0'
+    projectKey: '210215-USF-NET_Jonathan_Long-P1'
+    projectName: 'Jonathan_Long-P1'
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
