--- a/StoreApp/StoreTests/StoreTests.csproj
+++ b/StoreApp/StoreTests/StoreTests.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.3" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
+    <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -24,6 +25,7 @@
     <ProjectReference Include="..\StoreModels\StoreModels.csproj" />
     <ProjectReference Include="..\StoreDL\StoreDL.csproj" />
     <ProjectReference Include="..\StoreBL\StoreBL.csproj" />
+    <ProjectReference Include="..\StoreMVC\StoreMVC.csproj" />
   </ItemGroup>
 
 </Project>
